# be-external-api-py

./: ._compose.yaml  .adr-dir  Dockerfile  README.md  compose.yaml  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
docs/0_ARCHITECTURE/: 設計指針.md
docs/1_ADR/: 0-ADRの書き方.md  0001-record-architecture-decisions.md  0002-secound-record.md
docs/2_ENVIRONMENT/: ERRORS.md  開発環境について.md
src/api/routers/: task.py
src/api/schemas/: task.py
src/be_external_api_py/api/: main.py
src/be_external_api_py/api/routes/: task.py
