[tool.poetry]
name = "be-external-api-py"
version = "0.1.0"
description = ""
authors = ["behike56 <engineering@lambda-publishing.dev>"]
readme = "README.md"
packages = [{include = "be_external_api_py", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.36"
requests = "^2.32.3"
pyyaml = "^6.0.2"
alembic = "^1.14.0"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.2"
alembic = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
